--- a/tests/quiz.yaml
+++ b/tests/quiz.yaml
@@ -7,7 +7,7 @@
   examyear: 2100
   examvenue: online
   examsemester: Semester 2
-  programmeyear: Senior Sophister
+  programmeyearname: Senior Sophister
   modulename: Coding for Dummies
   modulecode: C101 
   examiner: Prof. F. Bar
