added width attribute for images

--- a/bbquiz/templates/bbquiz.cfg
+++ b/bbquiz/templates/bbquiz.cfg
@@ -21,7 +21,7 @@ targets:
 
     descr_cmd : ${inputbasename}.txt  # command to use (here we have no suggestion, so just print output path)
 
-    fmt       : html                  # latex or html: what markdown gets converted to
+    fmt       : html                  # latex or html: format that markdown gets converted to
 
     template  : bb.jinja              # filename for the jinja template used
                                       # if relative path, the application will try, in order:
