[cli] update file watch and add build process

--- a/src/bbquiz/templates/bbquiz.cfg
+++ b/src/bbquiz/templates/bbquiz.cfg
@@ -45,6 +45,7 @@ targets:
   - out       : ${inputbasename}.tex
     descr     : latex
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.tex
+    post_cmd  : latexmk -xelatex -interaction=nonstopmode ${inputbasename}.tex
     fmt       : latex
     template  : tcd-eleceng-latex.jinja
 
@@ -52,6 +53,7 @@ targets:
   - out       : ${inputbasename}.solutions.tex
     descr     : Latex solutions
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.solutions.tex
+    post_cmd  : latexmk -xelatex -interaction=nonstopmode ${inputbasename}.solutions.tex
     fmt       : latex
     template  : latex-solutions.jinja
 
