rework build targets

--- a/src/bbquiz/templates/bbquiz.cfg
+++ b/src/bbquiz/templates/bbquiz.cfg
@@ -45,7 +45,6 @@ targets:
   - out       : ${inputbasename}.tex
     descr     : latex
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.tex
-    post_cmd  : latexmk -xelatex -interaction=nonstopmode ${inputbasename}.tex
     fmt       : latex
     template  : tcd-eleceng-latex.jinja
 
@@ -53,9 +52,19 @@ targets:
   - out       : ${inputbasename}.solutions.tex
     descr     : Latex solutions
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.solutions.tex
-    post_cmd  : latexmk -xelatex -interaction=nonstopmode ${inputbasename}.solutions.tex
     fmt       : latex
     template  : latex-solutions.jinja
 
+# target #5 -- post build from Target #3
+  - out       : ${inputbasename}.pdf
+    dep       : ${inputbasename}.tex
+    descr     : latex build
+    descr_cmd : ${inputbasename}.pdf
+    build_cmd : latexmk -xelatex -interaction=nonstopmode ${inputbasename}.tex
 
-
+# target #6 -- post build from Target #4
+  - out       : ${inputbasename}.solutions.pdf
+    dep       : ${inputbasename}.solutions.tex
+    descr     : latex solutions build
+    descr_cmd : ${inputbasename}.solutions.pdf
+    build_cmd : latexmk -xelatex -interaction=nonstopmode ${inputbasename}.solutions.tex
