add latexpreamble, html_css and html_pre features

--- a/src/bbquiz/templates/bbquiz.cfg
+++ b/src/bbquiz/templates/bbquiz.cfg
@@ -1,7 +1,8 @@
 #
 # default config file for bbquiz
 # this is a YAML file (https://en.wikipedia.org/wiki/YAML)
-# important: do not use tab's (http://yaml.org/faq.html)
+#
+# IMPORTANT: SO NOT USE TAB, USE SPACES!!! (http://yaml.org/faq.html)
 #
 
 # version of the bbquiz
@@ -13,30 +14,39 @@ version: 0.2
 targets:
 
 # target #1
-  - out       : ${inputbasename}.txt  # template for output filename.
-                                      #    ${inputbasename} refers to the basename of the quiz
-                                      #    (eg. mcq-01.yaml => mcq-01)
+  - out       : ${inputbasename}.txt     # template for outputfilename.
+                                         # ${inputbasename} refers to the basename of the quiz
+                                         # (eg. mcq-01.yaml => mcq-01)
 
-    descr     : BlackBoard CSV        # description for the target. 
+    descr     : BlackBoard CSV           # description for the target. 
 
-    descr_cmd : ${inputbasename}.txt  # command to use (here we have no suggestion, so just print output path)
+    descr_cmd : ${inputbasename}.txt     # command to use (here we
+                                         # have no suggestion, so just
+                                         # print output path)
 
-    fmt       : html                  # latex or html: format that markdown gets converted to
+    fmt       : html                     # latex or html: format that markdown gets converted to
 
-    template  : bb.jinja              # filename for the jinja template used
-                                      # if relative path, the application will try, in order:
-                                      #   1) the local dir              
-                                      #   2) the default config dir 
-                                      #   3) the package templates dir
-                                      # eg. on my mac:
-                                      #   ./bb.jinja
-                                      #   ~/Library/Application\ Support/bbquiz/bb.jinja
-                                      #   ~/Library/Python/3.9/lib/python/site-packages/bbquiz/templates/bb.jinja
-                                      # if absolute path, the application only try the absolute path
+    html_pre  : html-latex-preamble.tex  # latex preamble for generating the equations in the markdown > html conversion
+
+    html_css  : html-inline-style.css    # CSS used for inline styling the HTML render.
+                                         # e.g. it can be used to stye <code></code>, tables, line separation, etc.
+
+    template  : bb.jinja                 # filename for the jinja template used
+                                         # if relative path, the application will try, in order:
+                                         #   1) the local dir              
+                                         #   2) the default config dir 
+                                         #   3) the package templates dir
+                                         # eg. on my mac:
+                                         #   ./bb.jinja
+                                         #   ~/Library/Application\ Support/bbquiz/bb.jinja
+                                         #   ~/Library/Python/3.9/lib/python/site-packages/bbquiz/templates/bb.jinja
+                                         # if absolute path, the application only try the absolute path
 
 # target #2
   - out       : ${inputbasename}.html
     descr     : html preview
+    html_pre  : html-latex-preamble.tex
+    html_css  : html-inline-style.css
     descr_cmd : ${inputbasename}.html
     fmt       : html
     template  : preview-html.jinja
