--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 
 
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
