--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
   "watchdog",
   "mistletoe>=1.2",
   "css_inline",
-  "appdirs"
+  "appdirs",
+  "latex2mathml"
 ]
 requires-python = ">=3.8"
 authors = [
