adding --target feature to cli. partly reworked resolving of targets. Still need a bit of work to get to full dependency graph

--- a/src/bbquiz/templates/bbquiz.cfg
+++ b/src/bbquiz/templates/bbquiz.cfg
@@ -18,7 +18,8 @@ targets:
                                          # ${inputbasename} refers to the basename of the quiz
                                          # (eg. mcq-01.yaml => mcq-01)
 
-    descr     : BlackBoard CSV           # description for the target. 
+    descr     : BlackBoard CSV           # description for the target.
+    name      : bb                       # name of that target (id)
 
     descr_cmd : ${inputbasename}.txt     # command to use (here we
                                          # have no suggestion, so just
@@ -45,6 +46,7 @@ targets:
 # target #2
   - out       : ${inputbasename}.html
     descr     : html preview
+    name      : html-preview
     html_pre  : html-latex-preamble.tex
     html_css  : html-inline-style.css
     descr_cmd : ${inputbasename}.html
@@ -53,28 +55,32 @@ targets:
 
 # target #3
   - out       : ${inputbasename}.tex
-    descr     : latex
+    descr     : latex source file
+    name      : latex
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.tex
     fmt       : latex
     template  : tcd-eleceng-latex.jinja
 
 # target #4
   - out       : ${inputbasename}.solutions.tex
-    descr     : Latex solutions
+    descr     : latex source file for solutions  
+    name      : latex-solutions
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.solutions.tex
     fmt       : latex
     template  : latex-solutions.jinja
 
 # target #5 -- post build from Target #3
   - out       : ${inputbasename}.pdf
-    dep       : ${inputbasename}.tex
     descr     : latex build
+    name      : pdf
+    dep       : latex
     descr_cmd : ${inputbasename}.pdf
     build_cmd : latexmk -xelatex -interaction=nonstopmode ${inputbasename}.tex
 
 # target #6 -- post build from Target #4
   - out       : ${inputbasename}.solutions.pdf
-    dep       : ${inputbasename}.solutions.tex
     descr     : latex solutions build
+    name      : pdf-solutions
+    dep       : latex-solutions
     descr_cmd : ${inputbasename}.solutions.pdf
     build_cmd : latexmk -xelatex -interaction=nonstopmode ${inputbasename}.solutions.tex
