Feat: Adding --target-list as feature

--- a/src/bbquiz/templates/bbquiz.cfg
+++ b/src/bbquiz/templates/bbquiz.cfg
@@ -55,7 +55,7 @@ targets:
 
 # target #3
   - out       : ${inputbasename}.tex
-    descr     : latex source file
+    descr     : latex
     name      : latex
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.tex
     fmt       : latex
@@ -63,7 +63,7 @@ targets:
 
 # target #4
   - out       : ${inputbasename}.solutions.tex
-    descr     : latex source file for solutions  
+    descr     : latex solutions  
     name      : latex-solutions
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.solutions.tex
     fmt       : latex
