Feat: Mathml render added

--- a/src/bbquiz/templates/bbquiz.cfg
+++ b/src/bbquiz/templates/bbquiz.cfg
@@ -25,7 +25,7 @@ targets:
                                          # have no suggestion, so just
                                          # print output path)
 
-    fmt       : html                     # latex or html: format that markdown gets converted to
+    fmt       : html-mathml              # latex, html, html-mathml: format that markdown gets converted to
 
     html_pre  : html-latex-preamble.tex  # latex preamble for generating the equations in the markdown > html conversion
 
@@ -50,7 +50,7 @@ targets:
     html_pre  : html-latex-preamble.tex
     html_css  : html-inline-style.css
     descr_cmd : ${inputbasename}.html
-    fmt       : html
+    fmt       : html-mathml
     template  : preview-html.jinja
 
 # target #3
