--- a/src/bbquiz/templates/bbquiz.cfg
+++ b/src/bbquiz/templates/bbquiz.cfg
@@ -25,8 +25,7 @@ targets:
                                          # have no suggestion, so just
                                          # print output path)
 
-    fmt       : html-mathml              # latex, html, html-mathml: format that markdown gets converted to
-
+    fmt       : html-svg                 # latex, html, svg, html-mathml: format that markdown gets converted to
     html_pre  : html-latex-preamble.tex  # latex preamble for generating the equations in the markdown > html conversion
 
     html_css  : html-inline-style.css    # CSS used for inline styling the HTML render.
@@ -50,7 +49,7 @@ targets:
     html_pre  : html-latex-preamble.tex
     html_css  : html-inline-style.css
     descr_cmd : ${inputbasename}.html
-    fmt       : html-mathml
+    fmt       : html-svg
     template  : preview-html.jinja
 
 # target #3
