Feat: Improved error handling

--- a/src/bbquiz/templates/bbquiz.cfg
+++ b/src/bbquiz/templates/bbquiz.cfg
@@ -6,10 +6,12 @@
 #
 
 # version of the bbquiz
-version: 0.4
+version: 0.7
 
 # list of targets:
 #   you can add/delete/modify this list
+
+schema_path: schema.json
 
 targets:
 
