--- a/src/quizml/templates/quizml.cfg
+++ b/src/quizml/templates/quizml.cfg
@@ -1,11 +1,11 @@
 #
-# default config file for bbquiz
+# default config file for quizml
 # this is a YAML file (https://en.wikipedia.org/wiki/YAML)
 #
 # IMPORTANT: SO NOT USE TAB, USE SPACES!!! (http://yaml.org/faq.html)
 #
 
-# version of the bbquiz
+# version of the quizml
 version: 0.7
 
 # list of targets:
@@ -40,8 +40,8 @@ targets:
                                          #   3) the package templates dir
                                          # eg. on my mac:
                                          #   ./bb.jinja
-                                         #   ~/Library/Application\ Support/bbquiz/bb.jinja
-                                         #   ~/Library/Python/3.9/lib/python/site-packages/bbquiz/templates/bb.jinja
+                                         #   ~/Library/Application\ Support/quizml/bb.jinja
+                                         #   ~/Library/Python/3.9/lib/python/site-packages/quizml/templates/bb.jinja
                                          # if absolute path, the application only try the absolute path
 
 # target #2
