--- a/demo/quiz1.yaml
+++ b/demo/quiz1.yaml
@@ -4,26 +4,17 @@
     If vector ${\bf w}$ is of dimension $3 \times 1$ and matrix ${\bf A}$ of
     dimension $5 \times 3$, then what is the dimension of $\left({\bf w}^{\top}{\bf
     A}^{\top}{\bf A}{\bf w}\right)^{\top}$?
+  choices:
+    - o:  $5\times 5$
+    - o:  $3\times 3$
+    - o:  $3\times 1$
+    - x:  $1\times 1$
 
-  answers:
-    - answer:  ${\tt 5}\times {\tt 5}$
-      correct: false
-    - answer:  ${\tt 3}\times {\tt 3}$
-      correct: false
-    - answer:  ${\tt 3}\times {\tt 1}$
-      correct: false
-    - answer:  ${\tt 1}\times {\tt 1}$
-      correct: true
-
-- type: mc
+- type: tf
   marks: 5         
   question: |
-    Is this the image of a tree?
+    From this graph of the loss during training, we can say that there is underfitting.
     
-    ![](figures/bee.jpg)
+    ![](figures/fig-2.svg){width=30em}
     
-  answers:
-    - answer: "yes"
-      correct: false
-    - answer: "false"
-      correct: true
+  answer: false
