--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,4 +39,7 @@ Homepage = "https://github.com/frcs/quizml"
 [project.scripts]
 quizml="quizml.cli.cli:main"
 
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+
 
