Chore: Update project metadata and clean up GEMINI.md
Updated the Homepage URL in pyproject.toml to point to the GitHub Pages site and removed unnecessary trailing newlines from GEMINI.md.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ keywords = ["BlackBoard", "exam", "test", "quiz", "MCQ",  "YAML", "Markdown", "L
 
 [project.urls]
 Repository = "https://github.com/frcs/quizml.git"
-Homepage = "https://github.com/frcs/quizml"
+Homepage = "https://frcs.github.io/quizml"
 
 [project.scripts]
 quizml="quizml.cli.cli:main"
