--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
   "mistletoe==1.3.0",
   "css_inline",
   "latex2mathml",
-  "appdirs"
+  "appdirs",
+  "docxtpl"
 ]
 requires-python = ">=3.8"
 authors = [
