Feat: Allow defining default targets in configuration

--- a/src/quizml/templates/quizml.cfg
+++ b/src/quizml/templates/quizml.cfg
@@ -15,6 +15,10 @@ schema_path: schema.json
 
 stats_template: stats.jinja
 
+# default_targets:
+#   - bb
+#   - html-preview
+
 targets:
 
 # target #1
