--- a/src/quizml/templates/quizml.cfg
+++ b/src/quizml/templates/quizml.cfg
@@ -13,7 +13,7 @@ version: 0.7
 
 schema_path: schema.json
 
-stats_template: stats.jinja
+stats_template: stats.txt.j2
 
 # default_targets:
 #   - bb
@@ -34,31 +34,31 @@ targets:
                                          # print output path)
 
     fmt       : html-svg                 # latex, html, svg, html-mathml: format that markdown gets converted to
-    html_pre  : html-latex-preamble.tex  # latex preamble for generating the equations in the markdown > html conversion
+    html_pre  : math-preamble.tex  # latex preamble for generating the equations in the markdown > html conversion
 
-    html_css  : html-inline-style.css    # CSS used for inline styling the HTML render.
+    html_css  : markdown-html.css    # CSS used for inline styling the HTML render.
                                          # e.g. it can be used to stye <code></code>, tables, line separation, etc.
 
-    template  : bb.jinja                 # filename for the jinja template used
+    template  : blackboard.txt.j2                 # filename for the jinja template used
                                          # if relative path, the application will try, in order:
                                          #   1) the local dir              
                                          #   2) the default config dir 
                                          #   3) the package templates dir
                                          # eg. on my mac:
-                                         #   ./bb.jinja
-                                         #   ~/Library/Application\ Support/quizml/bb.jinja
-                                         #   ~/Library/Python/3.9/lib/python/site-packages/quizml/templates/bb.jinja
+                                         #   ./blackboard.txt.j2
+                                         #   ~/Library/Application\ Support/quizml/blackboard.txt.j2
+                                         #   ~/Library/Python/3.9/lib/python/site-packages/quizml/templates/blackboard.txt.j2
                                          # if absolute path, the application only try the absolute path
 
 # target #2
   - out       : ${inputbasename}.html
     descr     : html preview
     name      : html-preview
-    html_pre  : html-latex-preamble.tex
-    html_css  : html-inline-style.css
+    html_pre  : math-preamble.tex
+    html_css  : markdown-html.css
     descr_cmd : ${inputbasename}.html
     fmt       : html-svg
-    template  : preview-html.jinja
+    template  : preview.html.j2
 
 # target #3
   - out       : ${inputbasename}.tex
@@ -66,7 +66,7 @@ targets:
     name      : latex
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.tex
     fmt       : latex
-    template  : tcd-eleceng-latex.jinja
+    template  : tcd-exam.tex.j2
 
 # target #4
   - out       : ${inputbasename}.solutions.tex
@@ -74,7 +74,7 @@ targets:
     name      : latex-solutions
     descr_cmd : latexmk -xelatex -pvc ${inputbasename}.solutions.tex
     fmt       : latex
-    template  : latex-solutions.jinja
+    template  : tcd-exam-solutions.tex.j2
 
 # target #5 -- post build from Target #3
   - out       : ${inputbasename}.pdf
