--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
   "jinja2",
   "colorama",
   "watchdog",
-  "mistletoe==1.3.0",
+  "mistletoe>=1.4",
   "css_inline",
   "latex2mathml",
   "appdirs",
