--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,5 +73,10 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
 
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+]
+
 
 
